--- a/tasks_data.json
+++ b/tasks_data.json
@@ -118,14 +118,8 @@
       },
       "priority": "低",
       "difficulty": "困难",
-      "subtasks": [
-        {
-          "id": 1772028603424,
-          "name": "啊",
-          "completed": false
-        }
-      ]
+      "subtasks": []
     }
   ],
-  "time": "2026-02-25T14:14:27.510Z"
+  "time": "2026-02-25T14:14:40.118Z"
 }
