--- a/tasks_data.json
+++ b/tasks_data.json
@@ -103,7 +103,7 @@
     {
       "id": 1771952480875,
       "name": "化学自招6",
-      "completed": false,
+      "completed": true,
       "start": "2026-02-24",
       "deadline": "2026-02-26",
       "time": 60,
@@ -122,7 +122,7 @@
         {
           "id": 1772029230959,
           "name": "你好",
-          "completed": false,
+          "completed": true,
           "priority": "高",
           "difficulty": "中等",
           "tags": [
@@ -132,8 +132,9 @@
           "start": "2026-02-25",
           "deadline": "2026-02-26"
         }
-      ]
+      ],
+      "completedAt": "2026-02-25T14:20:58.002Z"
     }
   ],
-  "time": "2026-02-25T14:20:38.462Z"
+  "time": "2026-02-25T14:20:59.874Z"
 }
