--- a/tasks_data.json
+++ b/tasks_data.json
@@ -34,7 +34,9 @@
       },
       "tags": [
         "生物"
-      ]
+      ],
+      "priority": "中",
+      "difficulty": "中等"
     },
     {
       "name": "道法",
@@ -135,5 +137,5 @@
       ]
     }
   ],
-  "time": "2026-02-25T14:21:31.887Z"
+  "time": "2026-02-25T14:35:47.199Z"
 }
