--- a/tasks_data.json
+++ b/tasks_data.json
@@ -15,7 +15,9 @@
       "deadline": "2026-02-25",
       "tags": [
         "地理"
-      ]
+      ],
+      "priority": "中",
+      "difficulty": "中等"
     },
     {
       "name": "生物跨学科",
@@ -137,5 +139,5 @@
       ]
     }
   ],
-  "time": "2026-02-25T14:35:47.199Z"
+  "time": "2026-02-25T14:35:53.203Z"
 }
