--- a/tasks_data.json
+++ b/tasks_data.json
@@ -52,8 +52,8 @@
       "countdown": {
         "totalSeconds": 3000,
         "remainingSeconds": 3000,
-        "startTime": null,
-        "isRunning": false
+        "startTime": 1772076026953,
+        "isRunning": true
       },
       "tags": [
         "道法"
@@ -139,5 +139,5 @@
       ]
     }
   ],
-  "time": "2026-02-25T14:35:53.203Z"
+  "time": "2026-02-26T03:20:26.959Z"
 }
