--- a/tasks_data.json
+++ b/tasks_data.json
@@ -45,7 +45,7 @@
       "start": "2026-02-24",
       "time": 50,
       "deadline": "2026-02-24",
-      "completed": true,
+      "completed": false,
       "actualTime": null,
       "aiSuggestedTime": null,
       "id": 1771938383730,
@@ -59,8 +59,7 @@
         "道法"
       ],
       "priority": "高",
-      "difficulty": "简单",
-      "completedAt": "2026-02-26T04:26:45.980Z"
+      "difficulty": "简单"
     },
     {
       "name": "历史",
@@ -140,5 +139,5 @@
       ]
     }
   ],
-  "time": "2026-02-26T04:26:45.987Z"
+  "time": "2026-02-26T04:27:59.885Z"
 }
