--- a/tasks_data.json
+++ b/tasks_data.json
@@ -45,13 +45,13 @@
       "start": "2026-02-24",
       "time": 50,
       "deadline": "2026-02-24",
-      "completed": false,
-      "actualTime": null,
+      "completed": true,
+      "actualTime": 45,
       "aiSuggestedTime": null,
       "id": 1771938383730,
       "countdown": {
         "totalSeconds": 3000,
-        "remainingSeconds": 3000,
+        "remainingSeconds": 0,
         "startTime": 1772076026953,
         "isRunning": true
       },
@@ -59,7 +59,8 @@
         "道法"
       ],
       "priority": "高",
-      "difficulty": "简单"
+      "difficulty": "简单",
+      "completedAt": "2026-02-26T04:28:01.610Z"
     },
     {
       "name": "历史",
@@ -139,5 +140,5 @@
       ]
     }
   ],
-  "time": "2026-02-26T04:27:59.885Z"
+  "time": "2026-02-26T04:28:04.713Z"
 }
