--- a/tasks_data.json
+++ b/tasks_data.json
@@ -24,13 +24,13 @@
       "start": "2026-02-24",
       "time": 56,
       "deadline": "2026-02-25",
-      "completed": false,
-      "actualTime": null,
+      "completed": true,
+      "actualTime": 50,
       "aiSuggestedTime": null,
       "id": 1771938402547,
       "countdown": {
         "totalSeconds": 3360,
-        "remainingSeconds": 3360,
+        "remainingSeconds": 0,
         "startTime": null,
         "isRunning": false
       },
@@ -38,7 +38,8 @@
         "生物"
       ],
       "priority": "中",
-      "difficulty": "中等"
+      "difficulty": "中等",
+      "completedAt": "2026-02-26T06:15:11.757Z"
     },
     {
       "name": "道法",
@@ -140,5 +141,5 @@
       ]
     }
   ],
-  "time": "2026-02-26T06:15:09.101Z"
+  "time": "2026-02-26T06:15:16.617Z"
 }
