--- a/tasks_data.json
+++ b/tasks_data.json
@@ -3,10 +3,10 @@
     {
       "id": 1771940996122,
       "name": "地理跨学科",
-      "completed": false,
+      "completed": true,
       "countdown": {
         "totalSeconds": 3360,
-        "remainingSeconds": 3360,
+        "remainingSeconds": 0,
         "startTime": null,
         "isRunning": false
       },
@@ -17,7 +17,9 @@
         "地理"
       ],
       "priority": "中",
-      "difficulty": "中等"
+      "difficulty": "中等",
+      "completedAt": "2026-02-26T08:43:52.262Z",
+      "actualTime": 50
     },
     {
       "name": "生物跨学科",
@@ -141,5 +143,5 @@
       ]
     }
   ],
-  "time": "2026-02-26T06:15:16.617Z"
+  "time": "2026-02-26T08:43:57.002Z"
 }
