--- a/tasks_data.json
+++ b/tasks_data.json
@@ -111,12 +111,12 @@
     {
       "id": 1772095665708,
       "name": "化学自招5",
-      "completed": false,
+      "completed": true,
       "priority": "低",
       "difficulty": "困难",
       "countdown": {
         "totalSeconds": 3600,
-        "remainingSeconds": 3600,
+        "remainingSeconds": 0,
         "startTime": null,
         "isRunning": false
       },
@@ -125,7 +125,9 @@
       "deadline": "2026-02-26",
       "tags": [
         "化学"
-      ]
+      ],
+      "completedAt": "2026-02-26T11:16:20.720Z",
+      "actualTime": 62
     },
     {
       "id": 1771952480875,
@@ -162,5 +164,5 @@
       ]
     }
   ],
-  "time": "2026-02-26T11:16:17.174Z"
+  "time": "2026-02-26T11:16:29.578Z"
 }
