--- a/tasks_data.json
+++ b/tasks_data.json
@@ -132,7 +132,7 @@
     {
       "id": 1771952480875,
       "name": "化学自招6",
-      "completed": false,
+      "completed": true,
       "start": "2026-02-24",
       "deadline": "2026-02-26",
       "time": 60,
@@ -141,7 +141,7 @@
       ],
       "countdown": {
         "totalSeconds": 3600,
-        "remainingSeconds": 3600,
+        "remainingSeconds": 0,
         "startTime": null,
         "isRunning": false
       },
@@ -161,8 +161,10 @@
           "start": "2026-02-25",
           "deadline": "2026-02-26"
         }
-      ]
+      ],
+      "completedAt": "2026-02-26T11:16:31.581Z",
+      "actualTime": 63
     }
   ],
-  "time": "2026-02-26T11:16:29.578Z"
+  "time": "2026-02-26T11:16:35.070Z"
 }
