--- a/tasks_data.json
+++ b/tasks_data.json
@@ -88,7 +88,7 @@
       "difficulty": "简单"
     },
     {
-      "name": "化学第4讲ABC 第5讲C",
+      "name": "化学第4讲ABC",
       "start": "2026-02-24",
       "time": 55,
       "deadline": "2026-02-26",
@@ -166,5 +166,5 @@
       "actualTime": 63
     }
   ],
-  "time": "2026-02-26T11:16:35.070Z"
+  "time": "2026-02-26T11:16:45.110Z"
 }
