--- a/tasks_data.json
+++ b/tasks_data.json
@@ -111,7 +111,7 @@
     },
     {
       "id": 1772104637561,
-      "name": "第5讲C",
+      "name": "化学第5讲C",
       "completed": false,
       "priority": "低",
       "difficulty": "困难",
@@ -186,5 +186,5 @@
       "actualTime": 63
     }
   ],
-  "time": "2026-02-26T11:17:29.476Z"
+  "time": "2026-02-26T11:17:47.759Z"
 }
