--- a/tasks_data.json
+++ b/tasks_data.json
@@ -112,12 +112,12 @@
     {
       "id": 1772104637561,
       "name": "化学第5讲C",
-      "completed": false,
+      "completed": true,
       "priority": "低",
       "difficulty": "困难",
       "countdown": {
         "totalSeconds": 1800,
-        "remainingSeconds": 1800,
+        "remainingSeconds": 0,
         "startTime": null,
         "isRunning": false
       },
@@ -126,7 +126,9 @@
       "deadline": "2026-02-26",
       "tags": [
         "化学"
-      ]
+      ],
+      "completedAt": "2026-02-26T11:17:49.834Z",
+      "actualTime": 29
     },
     {
       "id": 1772095665708,
@@ -186,5 +188,5 @@
       "actualTime": 63
     }
   ],
-  "time": "2026-02-26T11:17:47.759Z"
+  "time": "2026-02-26T11:17:55.222Z"
 }
