--- a/tasks_data.json
+++ b/tasks_data.json
@@ -70,7 +70,7 @@
       "start": "2026-02-24",
       "time": 31,
       "deadline": "2026-02-24",
-      "completed": true,
+      "completed": false,
       "actualTime": 28,
       "aiSuggestedTime": null,
       "id": 1771938361329,
@@ -83,7 +83,6 @@
       "tags": [
         "历史"
       ],
-      "completedAt": "2026-02-25T02:40:39.849Z",
       "priority": "高",
       "difficulty": "简单"
     },
@@ -188,5 +187,5 @@
       "actualTime": 63
     }
   ],
-  "time": "2026-02-26T11:17:55.222Z"
+  "time": "2026-02-26T12:20:10.579Z"
 }
