--- a/tasks_data.json
+++ b/tasks_data.json
@@ -202,5 +202,6 @@
       "start": "2026-02-26"
     }
   ],
-  "time": "2026-02-26T13:02:39.040Z"
+  "time": "2026-02-26T13:03:30.884Z",
+  "syncType": "manual"
 }
