--- a/tasks_data.json
+++ b/tasks_data.json
@@ -202,6 +202,5 @@
       "start": "2026-02-26"
     }
   ],
-  "time": "2026-02-26T13:03:30.884Z",
-  "syncType": "manual"
+  "time": "2026-02-26T14:28:02.127Z"
 }
