--- a/tasks_data.json
+++ b/tasks_data.json
@@ -205,7 +205,7 @@
     },
     {
       "id": 1772118766300,
-      "name": "补充阅读",
+      "name": "补充阅读自行批改",
       "completed": false,
       "priority": "高",
       "difficulty": "简单",
@@ -220,5 +220,5 @@
       "deadline": "2026-02-27"
     }
   ],
-  "time": "2026-02-26T15:12:47.060Z"
+  "time": "2026-02-26T15:13:10.411Z"
 }
