--- a/tasks_data.json
+++ b/tasks_data.json
@@ -218,7 +218,23 @@
       "start": "2026-02-27",
       "time": 15,
       "deadline": "2026-02-27"
+    },
+    {
+      "id": 1772118818572,
+      "name": "上传vlog",
+      "completed": false,
+      "priority": "高",
+      "difficulty": "中等",
+      "countdown": {
+        "totalSeconds": 1800,
+        "remainingSeconds": 1800,
+        "startTime": null,
+        "isRunning": false
+      },
+      "start": "2026-02-27",
+      "time": 30,
+      "deadline": "2026-02-27"
     }
   ],
-  "time": "2026-02-26T15:13:10.411Z"
+  "time": "2026-02-26T15:13:39.394Z"
 }
