--- a/tasks_data.json
+++ b/tasks_data.json
@@ -234,7 +234,22 @@
       "start": "2026-02-27",
       "time": 30,
       "deadline": "2026-02-27"
+    },
+    {
+      "id": 1772120086092,
+      "name": "随笔1",
+      "completed": false,
+      "priority": "高",
+      "difficulty": "困难",
+      "countdown": {
+        "totalSeconds": 3600,
+        "remainingSeconds": 3600,
+        "startTime": null,
+        "isRunning": false
+      },
+      "start": "2026-02-26",
+      "time": 60
     }
   ],
-  "time": "2026-02-26T15:33:54.910Z"
+  "time": "2026-02-26T15:34:47.124Z"
 }
