--- a/tasks_data.json
+++ b/tasks_data.json
@@ -222,7 +222,7 @@
     {
       "id": 1772118818572,
       "name": "上传vlog",
-      "completed": false,
+      "completed": true,
       "priority": "高",
       "difficulty": "中等",
       "countdown": {
@@ -233,7 +233,8 @@
       },
       "start": "2026-02-27",
       "time": 30,
-      "deadline": "2026-02-27"
+      "deadline": "2026-02-27",
+      "completedAt": "2026-02-26T15:34:51.643Z"
     },
     {
       "id": 1772120086092,
@@ -249,7 +250,23 @@
       },
       "start": "2026-02-26",
       "time": 60
+    },
+    {
+      "id": 1772120137561,
+      "name": "随笔2",
+      "completed": false,
+      "priority": "高",
+      "difficulty": "困难",
+      "countdown": {
+        "totalSeconds": 3600,
+        "remainingSeconds": 3600,
+        "startTime": null,
+        "isRunning": false
+      },
+      "start": "2026-02-26",
+      "time": 60,
+      "deadline": "2026-02-27"
     }
   ],
-  "time": "2026-02-26T15:34:47.124Z"
+  "time": "2026-02-26T15:35:39.886Z"
 }
