--- a/tasks_data.json
+++ b/tasks_data.json
@@ -249,7 +249,8 @@
         "isRunning": false
       },
       "start": "2026-02-26",
-      "time": 60
+      "time": 60,
+      "deadline": "2026-02-27"
     },
     {
       "id": 1772120137561,
@@ -268,5 +269,5 @@
       "deadline": "2026-02-27"
     }
   ],
-  "time": "2026-02-26T15:35:39.886Z"
+  "time": "2026-02-26T15:36:04.742Z"
 }
