--- a/tasks_data.json
+++ b/tasks_data.json
@@ -254,7 +254,7 @@
     {
       "id": 1772120137561,
       "name": "随笔2",
-      "completed": false,
+      "completed": true,
       "priority": "高",
       "difficulty": "困难",
       "countdown": {
@@ -265,8 +265,25 @@
       },
       "start": "2026-02-26",
       "time": 60,
+      "deadline": "2026-02-27",
+      "completedAt": "2026-02-26T15:36:26.945Z"
+    },
+    {
+      "id": 1772120210636,
+      "name": "语文任务单",
+      "completed": false,
+      "priority": "高",
+      "difficulty": "困难",
+      "countdown": {
+        "totalSeconds": 5400,
+        "remainingSeconds": 5400,
+        "startTime": null,
+        "isRunning": false
+      },
+      "start": "2026-02-26",
+      "time": 90,
       "deadline": "2026-02-27"
     }
   ],
-  "time": "2026-02-26T15:36:13.142Z"
+  "time": "2026-02-26T15:36:51.950Z"
 }
