--- a/tasks_data.json
+++ b/tasks_data.json
@@ -254,7 +254,7 @@
     {
       "id": 1772120137561,
       "name": "随笔2",
-      "completed": true,
+      "completed": false,
       "priority": "高",
       "difficulty": "困难",
       "countdown": {
@@ -265,8 +265,7 @@
       },
       "start": "2026-02-26",
       "time": 60,
-      "deadline": "2026-02-27",
-      "completedAt": "2026-02-26T15:36:26.945Z"
+      "deadline": "2026-02-27"
     },
     {
       "id": 1772120210636,
@@ -285,5 +284,5 @@
       "deadline": "2026-02-27"
     }
   ],
-  "time": "2026-02-26T15:36:51.950Z"
+  "time": "2026-02-26T15:36:55.116Z"
 }
