手动同步上传

--- a/tasks_data.json
+++ b/tasks_data.json
@@ -284,5 +284,6 @@
       "deadline": "2026-02-27"
     }
   ],
-  "time": "2026-02-26T15:36:55.116Z"
+  "time": "2026-02-27T03:45:32.590Z",
+  "syncType": "manual"
 }
