--- a/tasks_data.json
+++ b/tasks_data.json
@@ -275,14 +275,14 @@
       "difficulty": "困难",
       "countdown": {
         "totalSeconds": 5400,
-        "remainingSeconds": 5400,
-        "startTime": 1772167405262,
-        "isRunning": true
+        "remainingSeconds": 5384,
+        "startTime": null,
+        "isRunning": false
       },
       "start": "2026-02-26",
       "time": 90,
       "deadline": "2026-02-27"
     }
   ],
-  "time": "2026-02-27T04:43:25.573Z"
+  "time": "2026-02-27T04:43:42.136Z"
 }
