手动同步上传

--- a/tasks_data.json
+++ b/tasks_data.json
@@ -284,5 +284,6 @@
       "deadline": "2026-02-27"
     }
   ],
-  "time": "2026-02-27T04:46:51.873Z"
+  "time": "2026-02-27T04:48:57.434Z",
+  "syncType": "manual"
 }
