--- a/tasks_data.json
+++ b/tasks_data.json
@@ -69,18 +69,20 @@
     {
       "id": 1772120137561,
       "name": "随笔2",
-      "completed": false,
+      "completed": true,
       "priority": "高",
       "difficulty": "困难",
       "countdown": {
         "totalSeconds": 3600,
-        "remainingSeconds": 3600,
+        "remainingSeconds": 0,
         "startTime": null,
         "isRunning": false
       },
       "start": "2026-02-26",
       "time": 60,
-      "deadline": "2026-02-27"
+      "deadline": "2026-02-27",
+      "completedAt": "2026-02-27T10:00:29.352Z",
+      "actualTime": 60
     },
     {
       "id": 1772120210636,
@@ -115,5 +117,5 @@
       "deadline": "2026-02-27"
     }
   ],
-  "time": "2026-02-27T10:00:27.497Z"
+  "time": "2026-02-27T10:00:33.153Z"
 }
