--- a/tasks_data.json
+++ b/tasks_data.json
@@ -3,7 +3,7 @@
     {
       "id": 1772118726560,
       "name": "英语练习三 四批改",
-      "completed": true,
+      "completed": false,
       "priority": "高",
       "difficulty": "简单",
       "countdown": {
@@ -15,7 +15,6 @@
       "start": "2026-02-27",
       "time": 15,
       "deadline": "2026-02-27",
-      "completedAt": "2026-02-27T12:23:53.264Z",
       "actualTime": 9
     },
     {
@@ -83,5 +82,5 @@
       "deadline": "2026-02-27"
     }
   ],
-  "time": "2026-02-27T12:23:57.235Z"
+  "time": "2026-02-27T12:24:21.710Z"
 }
