--- a/tasks_data.json
+++ b/tasks_data.json
@@ -8,9 +8,9 @@
       "difficulty": "简单",
       "countdown": {
         "totalSeconds": 900,
-        "remainingSeconds": 900,
-        "startTime": 1772195125698,
-        "isRunning": true
+        "remainingSeconds": 247,
+        "startTime": null,
+        "isRunning": false
       },
       "start": "2026-02-27",
       "time": 15,
@@ -84,5 +84,5 @@
       "actualTime": 9
     }
   ],
-  "time": "2026-02-27T12:25:26.092Z"
+  "time": "2026-02-27T12:36:19.805Z"
 }
