--- a/tasks_data.json
+++ b/tasks_data.json
@@ -34,7 +34,7 @@
     },
     {
       "id": 1772195889706,
-      "name": "2月27日设计背景图",
+      "name": "设计背景图",
       "completed": false,
       "priority": "中",
       "difficulty": "中等",
@@ -49,5 +49,5 @@
       "deadline": "2026-02-27"
     }
   ],
-  "time": "2026-02-27T13:25:40.662Z"
+  "time": "2026-02-27T13:25:59.594Z"
 }
