--- a/tasks_data.json
+++ b/tasks_data.json
@@ -53,7 +53,21 @@
       "deadline": "2026-02-27",
       "completedAt": "2026-02-27T13:34:38.574Z",
       "actualTime": 10
+    },
+    {
+      "id": 1772331558691,
+      "name": "今天整理错题",
+      "completed": false,
+      "priority": "中",
+      "difficulty": "中等",
+      "countdown": {
+        "totalSeconds": 1200,
+        "remainingSeconds": 1200,
+        "startTime": null,
+        "isRunning": false
+      },
+      "time": 20
     }
   ],
-  "time": "2026-02-28T02:03:31.530Z"
+  "time": "2026-03-01T02:19:18.710Z"
 }
