--- a/tasks_data.json
+++ b/tasks_data.json
@@ -67,7 +67,20 @@
         "isRunning": false
       },
       "time": 20
+    },
+    {
+      "id": 1772331604344,
+      "name": "今天不许和外婆发生矛盾",
+      "completed": false,
+      "priority": "中",
+      "difficulty": "中等",
+      "countdown": {
+        "totalSeconds": 900,
+        "remainingSeconds": 900,
+        "startTime": null,
+        "isRunning": false
+      }
     }
   ],
-  "time": "2026-03-01T02:19:18.710Z"
+  "time": "2026-03-01T02:20:05.052Z"
 }
