--- a/tasks_data.json
+++ b/tasks_data.json
@@ -80,7 +80,20 @@
         "startTime": null,
         "isRunning": false
       }
+    },
+    {
+      "id": 1772331843808,
+      "name": "你让我做什么题我就做什么题",
+      "completed": false,
+      "priority": "中",
+      "difficulty": "中等",
+      "countdown": {
+        "totalSeconds": 900,
+        "remainingSeconds": 900,
+        "startTime": null,
+        "isRunning": false
+      }
     }
   ],
-  "time": "2026-03-01T02:20:05.052Z"
+  "time": "2026-03-01T02:24:05.097Z"
 }
